<resources>
    <string name="app_name">GameTime</string>
    <string name="lbl_toque_para_iniciar">Toque para iniciar</string>
    <string name="lbl_game" translatable="false">Game</string>
    <string name="lbl_time" translatable="false">Time</string>
    <string name="lbl_sim">Sim</string>
    <string name="lbl_nao">Não</string>
    <string name="lbl_deseja_sair">Tem certeza que deseja sair do aplicativo?</string>
    <string name="lbl_produced_by_AAO">Produced by A.A.O</string>
    <string name="lbl_desc_bingo">Divirta-se e mostre para seus amigos que além de sorte você tem habilidade. Complete as colunas e prove que você é o mais sortudo, ou melhor o mais habilidoso!</string>
    <string name="lbl_desc_theJorney">Inicie uma aventura muito intrigante que vai fazer você explodir sua mente. Descubra um novo mundo repleto de mistérios e caminhos desconhecidos!</string>
    <string name="lbl_desc_jogoVelha">Jogue o clássico jogo da velha para mostrar suas habilidades. Tente ganhar do computador no nível de dificuldade mais elevado!</string>
    <string name="lbl_jogar">Jogar</string>
    <string name="lbl_bingo">Bingo</string>
    <string name="lbl_theJorney">The Jorney</string>
    <string name="lbl_jogoVelha">Jogo da Velha</string>
    <string name="lbl_home">Home</string>
    <string name="cd_icone_home">Icone Home</string>
    <string name="cd_icone_configuracoes">Ícone configurações</string>
    <string name="lbl_proximo">Próximo</string>
    <string name="lbl_comenzar">Começar</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="string_activity_jogo_velha">JOGO DA VELHA</string>

    <string-array name="game_nome">
        <item>@string/lbl_bingo</item>
        <item>@string/lbl_jogoVelha</item>
        <item>@string/lbl_theJorney</item>
    </string-array>

    <string-array name="game_desc">
        <item>@string/lbl_desc_bingo</item>
        <item>@string/lbl_desc_jogoVelha</item>
        <item>@string/lbl_desc_theJorney</item>
    </string-array>

</resources>
