<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="@dimen/_4sdp"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_home"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/icone_home"
            android:contentDescription="@string/cd_icone_home"/>

        <TextView
            android:layout_toEndOf="@id/img_home"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/branco"
            android:text="@string/lbl_home"
            android:layout_gravity="center"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/menu4"
            android:contentDescription="@string/cd_icone_configuracoes"/>

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>