<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_dialog">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img_game"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"/>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/branco"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="0.09"
        android:textStyle="bold"
        tools:text="@string/lbl_theJorney" />

    <TextView
        android:id="@+id/tv_gameDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/branco"
        android:textSize="@dimen/_16sdp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_gameTitle"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/lbl_desc_theJorney" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_positivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/base2"
        android:text="@string/lbl_jogar"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/branco"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gameDesc"
        app:rippleColor="@color/branco"
        app:strokeColor="@color/branco"
        app:strokeWidth="@dimen/_2sdp" />


</androidx.constraintlayout.widget.ConstraintLayout>